--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {},
   "devDependencies": {},
   "jspm": {
-    "dependencies": {},
+    "dependencies": {
+      "angular2": "npm:angular2@2.0.0-beta.0"
+    },
     "devDependencies": {
       "traceur": "github:jmcriffey/bower-traceur@0.0.92",
       "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.92"
