--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {},
   "jspm": {
     "dependencies": {
-      "angular2": "npm:angular2@2.0.0-beta.0"
+      "angular2": "npm:angular2@2.0.0-beta.0",
+      "reflect-metadata": "npm:reflect-metadata@^0.1.3"
     },
     "devDependencies": {
       "traceur": "github:jmcriffey/bower-traceur@0.0.92",
