--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "jspm": {
     "dependencies": {
       "angular2": "npm:angular2@2.0.0-beta.0",
-      "reflect-metadata": "npm:reflect-metadata@^0.1.3"
+      "reflect-metadata": "npm:reflect-metadata@^0.1.3",
+      "zone.js": "npm:zone.js@^0.5.10"
     },
     "devDependencies": {
       "traceur": "github:jmcriffey/bower-traceur@0.0.92",
