--- a/package.json
+++ b/package.json
@@ -5,11 +5,15 @@
   "repository": {
     "url": "https://github.com/evanplaice/angular2-es6-seed"
   },
-  "scripts": {},
+  "scripts": {
+    "start": "live-server"
+  },
   "author": "Evan Plaice <evanplaice>",
   "license": "MIT",
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "live-server": "^0.9.1"
+  },
   "jspm": {
     "dependencies": {
       "angular2": "npm:angular2@2.0.0-beta.0",
