--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
       "zone.js": "npm:zone.js@^0.5.10"
     },
     "devDependencies": {
+      "clean-css": "npm:clean-css@^3.4.9",
       "traceur": "github:jmcriffey/bower-traceur@0.0.92",
       "traceur-runtime": "github:jmcriffey/bower-traceur-runtime@0.0.92"
     }
