--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dependencies": {
       "angular2": "npm:angular2@2.0.0-beta.0",
       "css": "github:systemjs/plugin-css@^0.1.20",
+      "font-awesome": "npm:font-awesome@^4.5.0",
       "reflect-metadata": "npm:reflect-metadata@^0.1.3",
       "rxjs": "npm:rxjs@^5.0.0-beta.1",
       "zone.js": "npm:zone.js@^0.5.10"
