--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "start": "live-server",
-    "style": "semistandard || true"
+    "style": "semistandard || true",
+    "build": "jspm bundle-sfx demo dist/demo.min.js --minify"
   },
   "author": "Evan Plaice <evanplaice>",
   "license": "MIT",
